results highlight, midnight changes, player insear

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1922,7 +1922,7 @@
 "s_any_single" = "любой";
 "reset" = "Сброс";
 
-"closed_group_post" = "Эта запись из закрытой группы";
+"closed_group_post" = "Запись с закрытой стены";
 "deleted_target_comment" = "Этот комментарий принадлежит к удалённой записи";
 
 "no_results" = "Результатов нет";
