--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -229,6 +229,7 @@
 "users_posts" = "Записи $1";
 "clubs_posts" = "Записи сообщества";
 "others_posts" = "Чужие записи";
+"show_more" = "Показать больше";
 
 /* Friends */
 
@@ -887,6 +888,13 @@
 "listens_count_other" = "$1 прослушиваний";
 
 "add_audio_to_club" = "Добавить аудио в группу";
+"add_audio" = "Добавление аудио";
+"add_audio_limitations" = "Можно выбрать до 10 групп/плейлистов.";
+"to_club" = "В группу";
+"to_playlist" = "В плейлист";
+
+"audio_was_successfully_added" = "Аудио были успешно добавлены.";
+
 "what_club_add" = "В какую группу вы хотите добавить песню?";
 "group_has_audio" = "У группы уже есть эта песня.";
 "group_hasnt_audio" = "У группы нет этой песни.";
@@ -894,6 +902,7 @@
 "by_name" = "по композициям";
 "by_performer" = "по исполнителю";
 "no_access_clubs" = "Нет групп, где вы являетесь администратором.";
+"no_access_playlists" = "Вы ещё не создавали плейлистов.";
 "audio_successfully_uploaded" = "Аудио успешно загружено и на данный момент обрабатывается.";
 
 "broadcast_audio" = "Транслировать аудио в статус";
@@ -1444,6 +1453,7 @@
 "error_code" = "Код ошибки: $1.";
 "ffmpeg_timeout" = "Превышено время ожидания обработки ffmpeg. Попробуйте загрузить файл снова.";
 "ffmpeg_not_installed" = "Не удалось обработать файл. Похоже, на сервере не установлен ffmpeg.";
+"too_many_or_to_lack" = "Слишком мало либо слишком много источников.";
 
 /* Admin actions */
 
