--- a/locales/en.strings
+++ b/locales/en.strings
@@ -641,7 +641,7 @@
 "apply_style_for_this_device" = "Apply style only for this device";
 
 "search_for_groups" = "Search for groups";
-"search_for_users" = "Search for people";
+"search_for_users" = "Search for users";
 "search_for_posts" = "Search for posts";
 "search_for_comments" = "Search for comments";
 "search_for_videos" = "Search for videos";
@@ -1993,7 +1993,7 @@
 
 /* Search */
 
-"s_people" = "People";
+"s_people" = "Users";
 "s_groups" = "Clubs";
 "s_apps" = "Applications";
 "s_posts" = "Posts";
@@ -2002,7 +2002,7 @@
 "s_audios" = "Music";
 "s_audios_playlists" = "Playlists";
 
-"s_by_people" = "for people";
+"s_by_people" = "for users";
 "s_by_groups" = "for groups";
 "s_by_posts" = "for posts";
 "s_by_comments" = "for comments";
