--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -211,7 +211,7 @@
 "add_source" = "Добавление источника";
 "set_source" = "Указать источник";
 "source" = "Источник";
-"set_source_tip" = "Если вы используете материалы других авторов, важно указывать ссылку на оригинал. Это вы можете сделать ниже.";
+"set_source_tip" = "Если вы используете материалы других авторов, важно указывать ссылку на оригинал.<br>Сделать это вы можете ниже.";
 
 "add_signature" = "Подпись автора";
 "contains_nsfw" = "Содержит NSFW-контент";
