feat(users): ignore users and groups (#987)
* rewrite

* Update install/sqls/00049-ignored-sources.sql

Co-authored-by: Alexander Minkin <weryskok@gmail.com>

---------

Co-authored-by: Alexander Minkin <weryskok@gmail.com>

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -204,6 +204,7 @@
 "my_news" = "Мои новости";
 "all_news" = "Все новости";
 "posts_per_page" = "Количество записей на странице";
+"show_ignored_sources" = "Показывать игнорируемые источники";
 "attachment" = "Вложение";
 "post_as_group" = "От имени сообщества";
 "comment_as_group" = "От имени сообщества";
@@ -230,6 +231,17 @@
 "reply" = "Ответить";
 "post_is_ad" = "Этот пост был размещён за взятку.";
 "edited_short" = "ред.";
+
+"feed_settings" = "Настройки ленты";
+"ignored_sources" = "Игнорируемые источники";
+"ignore_user" = "Игнорировать пользователя";
+"unignore_user" = "Не игнорировать пользователя";
+
+"ignore_club" = "Игнорировать группу";
+"unignore_club" = "Не игнорировать группу";
+"no_ignores_count" = "Игнорируемых источников нет.";
+"stop_ignore" = "Не игнорировать";
+"start_from_page" = "Начинать со страницы";
 
 "all_posts" = "Все записи";
 "users_posts" = "Записи $1";
@@ -1445,6 +1457,11 @@
 "group_owner_is_banned" = "Создатель сообщества успешно забанен.";
 "group_is_banned" = "Сообщество успешно забанено";
 "description_too_long" = "Описание слишком длинное.";
+
+"invalid_club" = "Такой группы не существует.";
+"invalid_user" = "Такого пользователя не существует.";
+"ignored_sources_limit" = "Превышен лимит игнорируемых источников.";
+
 "invalid_audio" = "Такой аудиозаписи не существует.";
 "do_not_have_audio" = "У вас нет этой аудиозаписи.";
 "do_have_audio" = "У вас уже есть эта аудиозапись.";
@@ -1652,6 +1669,7 @@
 "question_confirm" = "Это действие нельзя отменить. Вы действительно уверены в том что хотите сделать?";
 "confirm_m" = "Подтвердить";
 "action_successfully" = "Операция успешна";
+"apply" = "Применить";
 
 /* User alerts */
 
