--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1652,6 +1652,8 @@
 "question_confirm" = "Это действие нельзя отменить. Вы действительно уверены в том что хотите сделать?";
 "confirm_m" = "Подтвердить";
 "action_successfully" = "Операция успешна";
+"exit_noun" = "Выход";
+"exit_confirmation" = "Уверены, что хотите выйти?";
 
 /* User alerts */
 
