--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -27,7 +27,7 @@
 "user_already_exists" = "Користувач з таким email вже існує.";
 "access_recovery" = "Відновлення доступу";
 "page_access_recovery" = "Відновити доступ до сторінки";
-"access_recovery_info" = "Забули пароль? Не хвилюйтеся, введіть ваші дані й ми відправимо вам на email інструкції з відновлення акаунта.";
+"access_recovery_info" = "Забули пароль? Не хвилюйтеся, введіть ваші дані й ми відправимо Вам на email інструкції з відновлення акаунта.";
 "access_recovery_info_2" = "Введіть ваш новий пароль. Всі поточні сеанси будуть припинені, а токени доступу анульовані.";
 "reset_password" = "Скинути пароль";
 "2fa_code_2" = "Код двофакторної аутентифікації";
@@ -92,20 +92,29 @@
 "years_other" = "$1 років";
 "show_my_birthday" = "Показувати дату народження";
 "show_only_month_and_day" = "Показувати лише день та місяць";
+
 "relationship" = "Сімейний стан";
 "relationship_0" = "Не зазначені";
-"relationship_1" = "Не одружений";
+"relationship_1" = "Неодружений";
+"relationship_1_fem" = "Незаміжня";
 "relationship_2" = "Зустрічаюсь";
+"relationship_2_prefix" = "з";
 "relationship_3" = "Заручений";
-"relationship_4" = "Одружений";
-"relationship_5" = "У цивільному шлюбі";
-"relationship_6" = "Закоханий";
-"relationship_7" = "Все складно";
-"relationship_8" = "В активному пошуку";
-"relationship_1_fem" = "Неодружена";
 "relationship_3_fem" = "Заручена";
-"relationship_4_fem" = "Одружена";
+"relationship_3_prefix" = "з";
+"relationship_4" = "Одружений";
+"relationship_4_fem" = "Заміжня";
+"relationship_4_prefix" = "на";
+"relationship_5" = "У цивільному шлюбі";
+"relationship_5_prefix" = "з";
+"relationship_6" = "Закоханий";
 "relationship_6_fem" = "Закохана";
+"relationship_6_prefix" = "в";
+"relationship_7" = "Все складно";
+"relationship_7_prefix" = "з";
+"relationship_8" = "В активному пошуку";
+
+
 "politViews" = "Політ. погляди";
 "politViews_0" = "Не вибрано";
 "politViews_1" = "Індиферентні";
@@ -146,9 +155,9 @@
 "post_writes_m" = "написав";
 "post_writes_f" = "написала";
 "post_writes_g" = "опублікували";
-"post_deact_m" = "видалив сторінку зі словами:";
-"post_deact_f" = "видалила сторінку зі словами:";
-"post_deact_g" = "видалили сторінку зі словами:";
+"post_deact_m" = "видалив сторінку зі слоВами:";
+"post_deact_f" = "видалила сторінку зі слоВами:";
+"post_deact_g" = "видалили сторінку зі слоВами:";
 "post_deact_silent_m" = "мовчки видалив свою сторінку.";
 "post_deact_silent_f" = "мовчки видалила свою сторінку.";
 "post_deact_silent_g" = "мовчки видалили свою сторінку.";
@@ -453,7 +462,7 @@
 
 "select_or_create_new" = "Оберіть існуючу нотатку або <a href='/notes/create'>створіть нову</a>";
 
-"notes_closed" = "Ви не можете прикріпити нотатку до запису, оскільки ваші нотатки видно тільки вам.<br><br> Ви можете змінити це в <a href=\"/settings?act=privacy\">налаштуваннях</a>.";
+"notes_closed" = "Ви не можете прикріпити нотатку до запису, оскільки ваші нотатки видно тільки Вам.<br><br> Ви можете змінити це в <a href=\"/settings?act=privacy\">налаштуваннях</a>.";
 "do_not_attach_note" = "Не прикріплювати нотатку";
 "something" = "Щось";
 "supports_xhtml" = "з (X)HTML підтримується.";
@@ -627,10 +636,10 @@
 "two_factor_authentication_disabled" = "Забезпечує надійний захист від злому: для входу на сторінку необхідно ввести код, отриманий в додатку 2FA.";
 "two_factor_authentication_enabled" = "Двофакторна автентифікація увімкнена. Ваша сторінка захищена.";
 "two_factor_authentication_login" = "У вас увімкнена двофакторна автентифікація. Для входу введіть код отриманий в додатку.";
-"two_factor_authentication_settings_1" = "Двофакторну автентифікацію через TOTP можна використовувати навіть без інтернету. Для цього вам знадобиться застосунок для генерації кодів, наприклад <b>Google Authenticator для Android та iOS</b> або <b>Aegis Authenticator чи andOTP</b> для Android. Важливо: на пристрої має бути точна дата та час.";
+"two_factor_authentication_settings_1" = "Двофакторну автентифікацію через TOTP можна використовувати навіть без інтернету. Для цього Вам знадобиться застосунок для генерації кодів, наприклад <b>Google Authenticator для Android та iOS</b> або <b>Aegis Authenticator чи andOTP</b> для Android. Важливо: на пристрої має бути точна дата та час.";
 "two_factor_authentication_settings_2" = "Використовуючи застосунок для двофакторної автентифікації, проскануйте наведений нижче QR-код:";
 "two_factor_authentication_settings_3" = "або вручну введіть секретний ключ: <b>$1</b>.";
-"two_factor_authentication_settings_4" = "Тепер введіть код, який вам надав застосунок, і пароль від вашої сторінки, щоб ми могли підтвердити, що ви дійсно ви.";
+"two_factor_authentication_settings_4" = "Тепер введіть код, який Вам надав застосунок, і пароль від вашої сторінки, щоб ми могли підтвердити, що ви дійсно ви.";
 "connect" = "Під'єднати";
 "enable" = "Включити";
 "disable" = "Відключити";
@@ -640,7 +649,7 @@
 "incorrect_code" = "Хибний код";
 "incorrect_2fa_code" = "Хибний код двофакторної автентифікації";
 "two_factor_authentication_enabled_message" = "Двофакторна автентифікація увімкнена";
-"two_factor_authentication_enabled_message_description" = "Вашу сторінку стало важче зламати. Рекомендуємо вам завантажити <a href='javascript:viewBackupCodes()'>резервні коди</a>";
+"two_factor_authentication_enabled_message_description" = "Вашу сторінку стало важче зламати. Рекомендуємо Вам завантажити <a href='javascript:viewBackupCodes()'>резервні коди</a>";
 "two_factor_authentication_disabled_message" = "Двофакторна автентифікація вимкнена";
 "view_backup_codes" = "Переглянути резервні коди";
 "backup_codes" = "Резервні коди для підтвердження входу";
@@ -670,7 +679,7 @@
 "info_uploaded_by" = "Завантажив";
 "info_upload_date" = "Дата завантаження";
 "videos_zero" = "Жодного відеозапису";
-"videos_one" = "Одна відеозапис";
+"videos_one" = "Один відеозапис";
 "videos_few" = "$1 відеозаписи";
 "videos_many" = "$1 відеозаписів";
 "videos_other" = "$1 відеозаписів";
@@ -839,7 +848,7 @@
 "nt_mention_in_video" = "в обговоренні відеозапису";
 "nt_mention_in_note" = "в обговоренні під";
 "nt_mention_in_topic" = "в обговоренні";
-"nt_sent_gift" = "відправив вам подарунок";
+"nt_sent_gift" = "відправив Вам подарунок";
 
 /* Time */
 
@@ -877,9 +886,9 @@
 "transfer_poins" = "Передача голосів";
 "transfer_poins_button" = "Передати голоси";
 "also_you_can_transfer_points" = "Також ви можете <a href=\"javascript:showCoinsTransferDialog($1, '$2')\">передати голоси</a> іншій людині.";
-"transferred_to_you" = "передав вам";
+"transferred_to_you" = "передав Вам";
 "transfer_trough_ton" = "Поповнити через TON";
-"transfer_ton_contents" = "Ви можете поповнити ваш баланс за допомогою криптовалюти TON. Достатньо просканувати QR-code програмою Tonkeeper, або вручну відправити TON за реквізитами. Протягом кількох хвилин вам прийде певна кількість голосів.";
+"transfer_ton_contents" = "Ви можете поповнити ваш баланс за допомогою криптовалюти TON. Достатньо просканувати QR-code програмою Tonkeeper, або вручну відправити TON за реквізитами. Протягом кількох хвилин Вам прийде певна кількість голосів.";
 "transfer_ton_address" = "<b>Адреса гаманця:</b> $1<br/><b>Зміст повідомлення:</b> $2";
 "transfer_ton_currency_per_ton" = "$1 TON";
 "receiver_address" = "Адреса одержувача";
@@ -991,7 +1000,7 @@
 "app_err_ava" = "Не вдалося завантажити аватарку";
 "app_err_ava_desc" = "Аватарка занадто велика чи крива: помилка загального характеру №$res.";
 "app_err_note" = "Не вдалося прикріпити замітку новин";
-"app_err_note_desc" = "Переконайтеся, що посилання правильне і нотатка належить вам.";
+"app_err_note_desc" = "Переконайтеся, що посилання правильне і нотатка належить Вам.";
 
 "learn_more" = "Детальніше";
 
@@ -1050,7 +1059,7 @@
 "you_have_not_entered_name_or_text" = "Ви не ввели тему або текст";
 "ticket_changed" = "Звернення змінено";
 "ticket_changed_comment" = "Зміни набудуть чинності через кілька секунд.";
-"banned_in_support_1" = "Вибачте, <b>$1</b>, але тепер вам не можна створювати звернення.";
+"banned_in_support_1" = "Вибачте, <b>$1</b>, але тепер Вам не можна створювати звернення.";
 "banned_in_support_2" = "Підстава: <b>$1</b>. Цього разу нам довелося забрати у вас цю можливість назавжди.";
 "you_can_close_this_ticket_1" = "Якщо ви не маєте запитань, Ви можете ";
 "you_can_close_this_ticket_2" = "закрити це звернення";
@@ -1084,7 +1093,7 @@
 "ec_header" = "Підтвердження реєстрації";
 "ec_title" = "Дякую!";
 "ec_1" = "<b>$1</b>, ваша реєстрація майже закінчена. Протягом кількох хвилин на вашу адресу електронної пошти повинен прийти лист із посиланням для підтвердження вашої адреси пошти.";
-"ec_2" = "Якщо з якихось причин вам не надійшов лист, перевірте папку Спам. Якщо листа не виявиться і там, то ви можете перенаправити листа.";
+"ec_2" = "Якщо з якихось причин Вам не надійшов лист, перевірте папку Спам. Якщо листа не виявиться і там, то ви можете перенаправити листа.";
 "ec_resend" = "Передати лист";
 
 /* Messages */
@@ -1242,8 +1251,7 @@
 "error_user_not_exists" = "Користувач або набір не існують.";
 "error_no_rights_gifts" = "Не вдалося підтвердити права на подарунок.";
 "error_no_more_gifts" = "У вас більше не залишилось цих подарунків.";
-"error_no_money" = "АХАХАХА ЛОШАРА ПІЗДУЙ НА ЗАРОБІТКИ У ПОЛЬЩУ";
-/* трррр шкібіді доп доп доп доп єс єс єс) */
+"error_no_money" = "На жаль, Вам бракує голосів";
 
 "description_too_long" = "Опис надто довгий.";
 
@@ -1645,11 +1653,11 @@
 "tour_section_2_text_1_3" = "<b>Порада:</b> Щоб ваш профіль мав гарний і поважний вигляд, ви можете його заповнити будь-якою інформацією або завантажити фотографію, яка підкреслить, наприклад, ваш глибокий внутрішній світ.";
 "tour_section_2_bottom_text_1" = "Ви єдиний, хто вирішує, скільки інформації ваші друзі мають дізнатися про вас.";
 "tour_section_2_title_2" = "Задайте свої налаштування своєї приватності";
-"tour_section_2_text_2_1" = "Ви можете визначити, хто саме може мати доступ до певних типів інформації, розділам та можливостям зв'язатися з вами.";
+"tour_section_2_text_2_1" = "Ви можете визначити, хто саме може мати доступ до певних типів інформації, розділам та можливостям зв'язатися з Вами.";
 "tour_section_2_text_2_2" = "Ви маєте змогу закрити доступ до своєї сторінки від пошукових систем і незареєстрованих користувачів.";
 "tour_section_2_text_2_3" = "<b>Пам'ятайте:</b> у майбутньому налаштування приватності будуть розширюватися.";
 "tour_section_2_title_3" = "Персональна адреса сторінки";
-"tour_section_2_text_3_1" = "Після реєстрації сторінки, вам видається персональний ID типа: <b>/id12345</b>";
+"tour_section_2_text_3_1" = "Після реєстрації сторінки, Вам видається персональний ID типа: <b>/id12345</b>";
 "tour_section_2_text_3_2" = "<b>Стандартний ID</b>, який був отриманий після реєстрації, <b>змінити не можна!</b>";
 "tour_section_2_text_3_3" = "Однак, в налаштуваннях своєї сторінки ви зможете прив'язати свою персональну адресу і цю адресу <b>можна буде змінити</b> в будь-який час";
 "tour_section_2_text_3_4" = "<b>Порада:</b> Можна займати будь-яку вільну адресу, довжина якої не менша за 5 символів.";
@@ -1717,7 +1725,7 @@
 "tour_section_12_text_3" = "<b>Порада:</b> перед встановленням фону, поекспериментуйте з розміткою: спробуйте віддзеркалити майбутню фонову картинку, або взагалі просто створіть гарний градієнт";
 "tour_section_12_title_2" = "Аватари";
 "tour_section_12_text_2_1" = "Ви можете задати варіант показу аватара користувача: стандартне, заокруглені та квадратні (1:1)";
-"tour_section_12_text_2_2" = "Ці налаштування буде видно тільки вам";
+"tour_section_12_text_2_2" = "Ці налаштування буде видно тільки Вам";
 "tour_section_12_title_3" = "Редагування правого меню";
 "tour_section_12_text_3_1" = "За потреби, ви можете приховати непотрібні розділи сайту";
 "tour_section_12_text_3_2" = "<b>Нагадування: </b>Розділи першої необхідності (Моя Сторінка; Мої Друзі; Мої Відповіді; Мої Налаштування) приховати не можна";
@@ -1804,7 +1812,7 @@
 /* BadBrowser */
 
 "deprecated_browser" = "Застарілий браузер";
-"deprecated_browser_description" = "Для перегляду цього контенту вам необхідний >Firefox ESR 52 або еквівалент по функціоналу навігатор по всесвітньою мережею інтернет. Співчуваємо про це.";
+"deprecated_browser_description" = "Для перегляду цього контенту Вам необхідний >Firefox ESR 52 або еквівалент по функціоналу навігатор по всесвітньою мережею інтернет. Співчуваємо про це.";
 
 /* Statistics */
 
@@ -1854,7 +1862,41 @@
 "mobile_user_info_hide" = "Приховувати";
 "mobile_user_info_show_details" = "Показати докладніше";
 "my" = "Мої";
-"введіть_назву_або_виконавця" = "Введіть назву або виконавця...";
+"enter_a_name_or_artist" = "Введіть назву або виконавця...";
+
+/* Fullscreen player */
+"hide_player" = "Приховати";
+"close_player" = "Закрити";
+"show_comments" = "Показати коментарі";
+"close_comments" = "Приховати інформацію";
+"to_page" = "Перейти на сторінку";
+"download_video" = "Завантажити";
+"added" = "Додано";
+"x_views" = "$1 переглядів";
+"video_author" = "Автор відео";
+"video_delete" = "Видалити";
+"no_description" = "опису немає";
+"show_more_comments" = "Відобразити більше коментарів";
+"video_processing" = "Відео завантажено та на цей момент оброблюється.";
+"video_access_denied" = "Доступ до відео заборонений";
+"open_page_to_read_comms" = "Для перегляду коментарів, відкрийте <a href=\"$1\">сторінку</a>.";
+"no_video_error" = "Немає відеозапису";
+"no_video_description" = "Оберіть файл або зазначте посилання.";
+"error_video" = "Трапилася помилка";
+"file_corrupted" = "Файл пошкоджений чи не має відеопотоку.";
+"link_incorrect" = "Ймовірно, посилання неправильне.";
+"no_name_error" = "Відео не може опубліковано без назви";
+"access_denied_error" = "Помилка доступу";
+"access_denied_error_description" = "Ви не маєте дозвіл редагувати цей ресурс";
+"changes_saved_video_comment" = "Оновлені дані з'являться на сторінці з відео";
+"cant_delete_video" = "Не вдалося видалити відео";
+"cant_delete_video_comment" = "Ви не увійшли в акаунт.";
+"change_video" = "Змінити відеозапис";
+"video_is_deleted" = "Відео видалено.";
+"share_video" = "Поширити відео";
+"shared_succ_video" = "Відео з'явиться на вашій стіні. Натисніть на сповіщення, щоби перейти до запису.";
+"watch_in_window" = "Переглянути у відео";
+"comments_load_timeout" = "При отриманні коментарів сталася помилка часу очікування"; 
 
 /* Moderation */
 
